add apps dan reconfigure startup command

--- a/python_build/Dockerfile
+++ b/python_build/Dockerfile
@@ -2,8 +2,8 @@ FROM python
 
 RUN apt-get update && apt-get install -y build-essential
 
-RUN pip3.7 install cmake
+RUN pip install cmake
 
-RUN pip3.7 install dlib face-recognition flask uwsgi
+RUN pip install dlib face-recognition flask uwsgi
 
-RUN pip3.7 install opencv-python
+RUN pip install opencv-python
