--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,27 +7,29 @@ services:
       image: tomcat
       volumes:
          - './web_apps/:/usr/local/tomcat/webapps' #letak direktori aplikasi dan target directory yang ada di container
-         - '/etc/localtime:/etc/localtime:ro'
+         - './jdbc.properties:/Applications/NetBeans/glassfish-4.1.1/configuration/jdbc.properties'
+         - './urls.properties:/Applications/NetBeans/glassfish-4.1.1/configuration/urls.properties'
+         #- '/etc/localtime:/etc/localtime:ro'
       ports:
-         - "8080:8080"
+         - "8081:8080"
   node:
       container_name: node_js
       restart: always
       image: node
       volumes:
          - './node/:/usr/src/app'  #letak direktori aplikasi dan target directory yang ada di container
-         - '/etc/localtime:/etc/localtime:ro'
+         #- '/etc/localtime:/etc/localtime:ro'
       ports:
          - "3000:3000"                           #sesuaikan port dengan listener port applikasi
       command: /bin/sh /usr/src/app/*nama js*.js #command yang digunakan untuk starting
   python:
       container_name: python
-      build: .python_build
+      build: ./python_build
       restart: always
       image: python_build
       volumes:
          - './python/:/usr/src/app'
-         - '/etc/localtime:/etc/localtime:ro'
+         #- '/etc/localtime:/etc/localtime:ro'
       ports:
-         - "4000:4000"                           #sesuaikan port dengan listener port applikasi
-      command: /usr/local/bin/uwsgi --socket 0.0.0.0:4000 --protocol=http --ini /usr/src/app/*nama init file*.ini
+         - "5000:5000"                           #sesuaikan port dengan listener port applikasi
+      command: python /usr/src/app/fm_face_recognition.py
