--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,13 @@ services:
       ports:
          - "5000:5000"                           #sesuaikan port dengan listener port applikasi
       command: python /usr/src/app/fm_face_recognition.py
+  tunnel:
+      container_name: tunnel
+      build: ./tunnel_build
+      restart: always
+      image: tunnel
+      volumes:
+         - './tunnel_account/:/tunnel/'
+      command: openvpn /tunnel/BSD.ovpn
+      devices:
+         - /dev/net/tun:/dev/net/tun
